
dist_appl_DATA = \
	2bwm.desktop \
	2bwm-git.desktop \
	aafire.desktop \
	aarchup.desktop \
	abiword.desktop \
	about-fedora.desktop \
	aboutinfo.desktop \
	about-this-computer.desktop \
	abuse.desktop \
	accerciser.desktop \
	accessories.desktop \
	ace-of-penguins.desktop \
	acroread.desktop \
	adie.desktop \
	AdobeReader.desktop \
	adwm.desktop \
	adwm-git.desktop \
	aeolus.desktop \
	aewm.desktop \
	aewm++.desktop \
	AfterStep.desktop \
	agave.desktop \
	akonaditray.desktop \
	alacarte.desktop \
	alacarte-system.desktop \
	alleyoop.desktop \
	allin1.desktop \
	alltray.desktop \
	almanah.desktop \
	AlsaMixer.app.desktop \
	alsamixer.desktop \
	alsaplayer.desktop \
	amarok.desktop \
	ams.desktop \
	amsynth.desktop \
	amule.desktop \
	anjuta.desktop \
	anki.desktop \
	apache.en.desktop \
	apvlv.desktop \
	arandr.desktop \
	Arch-AUR.desktop \
	Arch-Bugs.desktop \
	Arch-Developers.desktop \
	Arch-Documentation.desktop \
	Arch-Donate.desktop \
	Arch-Forum.desktop \
	Arch-Homepage.desktop \
	Arch-Schwag.desktop \
	Arch-SVN.desktop \
	Arch-Wiki.desktop \
	ardour2.desktop \
	ardour.desktop \
	ario.desktop \
	arista.desktop \
	armagetronad.desktop \
	arora.desktop \
	asclock.desktop \
	asclock-gtk.desktop \
	asclock-xlib.desktop \
	assaultcube.desktop \
	assistant.desktop \
	assistant-qt3.desktop \
	assistant-qt4.desktop \
	astromenace.desktop \
	asunder.desktop \
	aswallpaper.desktop \
	atanks.desktop \
	aterm.desktop \
	atomix.desktop \
	atop.desktop \
	at-spi-dbus-bus.desktop \
	at-spi-registryd.desktop \
	audacious2.desktop \
	audacious2-gtkui.desktop \
	audacity.desktop \
	audex.desktop \
	aumix.desktop \
	autofs.desktop \
	avahi-discover.desktop \
	avogadro.desktop \
	awesome.desktop \
	awesome-git.desktop \
	b653gv6.desktop \
	balsa.desktop \
	balsa-mailto-handler.desktop \
	banshee-1.desktop \
	baobab.desktop \
	barrage.desktop \
	base.desktop \
	bash.desktop \
	basket.desktop \
	bazaar-properties.desktop \
	bbkeys.desktop \
	bbpager.desktop \
	bbrun.desktop \
	bc.desktop \
	beaver.desktop \
	beneath-a-steel-sky.desktop \
	bibletime.desktop \
	blackbox.desktop \
	blackbox-git.desktop \
	blam.desktop \
	bleachbit-admin.desktop \
	bleachbit.desktop \
	blender.desktop \
	blender-windowed.desktop \
	bless.desktop \
	blinken.desktop \
	blobby2.desktop \
	blobwars.desktop \
	blocks.desktop \
	bluedevil-audio.desktop \
	bluedevil-input.desktop \
	bluedevil-monolithic.desktop \
	bluedevil-sendfile.desktop \
	bluedevil-wizard.desktop \
	bluefish.desktop \
	bluegriffon.desktop \
	bluemoon.desktop \
	bluetoothctl.desktop \
	bluetooth-properties.desktop \
	bluetooth-sendto.desktop \
	bme.desktop \
	bmon.desktop \
	boinc.desktop \
	boinc-manager.desktop \
	bomberclone.desktop \
	bomber.desktop \
	bonobo-browser.desktop \
	bovo.desktop \
	bpython.desktop \
	brasero-copy-medium.desktop \
	brasero.desktop \
	brasero-nautilus.desktop \
	bspwm.desktop \
	bssh.desktop \
	btanks.desktop \
	bubblemon.desktop \
	bvi.desktop \
	bviplus.desktop \
	bvnc.desktop \
	bzflag.desktop \
	bzr-explorer.desktop \
	cacafire.desktop \
	cairo-clock.desktop \
	cairo-compmgr.desktop \
	cairo-dock-cairo.desktop \
	caja-autorun-software.desktop \
	caja-browser.desktop \
	caja-computer.desktop \
	caja.desktop \
	caja-file-management-properties.desktop \
	caja-folder-handler.desktop \
	caja-home.desktop \
	Calc.desktop \
	calc.desktop \
	calcoo.desktop \
	calculator.desktop \
	calf.desktop \
	calibre.desktop \
	canfield.desktop \
	canorus.desktop \
	cantor.desktop \
	caph.desktop \
	caribou-autostart.desktop \
	caribou.desktop \
	catfish.desktop \
	cbatticon.desktop \
	celestia.desktop \
	cellwriter.desktop \
	cgoban.desktop \
	character-map.desktop \
	chbg.desktop \
	checkers.desktop \
	checkgmail.desktop \
	cheese.desktop \
	chemtool.desktop \
	chess-net.desktop \
	choqok.desktop \
	chromium-browser.desktop \
	chromium-bsu.desktop \
	chromium.desktop \
	cinnamon2d-screensaver.desktop \
	cinnamon.desktop \
	cinnamon-screensaver.desktop \
	clamz.desktop \
	claws-mail.desktop \
	clementine.desktop \
	clipgrab.desktop \
	Clonezilla-live.desktop \
	Clonezilla-server.desktop \
	clusterssh.desktop \
	CMake.desktop \
	compton.desktop \
	compton-fluxbox.desktop \
	config.desktop \
	conky.desktop \
	consonance.desktop \
	ControlPanel.desktop \
	critter.desktop \
	ctwm.desktop \
	ctwm-git.desktop \
	cups.desktop \
	cwm.desktop \
	cwm-git.desktop \
	cycle.desktop \
	dash.desktop \
	dasher.desktop \
	dasher-text-entry.desktop \
	dc.desktop \
	dc++.desktop \
	dconf-editor.desktop \
	ddd.desktop \
	debian-sensible-browser.desktop \
	debian-x-terminal-emulator.desktop \
	deja-dup.desktop \
	deja-dup-monitor.desktop \
	deja-dup-preferences.desktop \
	deluge.desktop \
	denemo.desktop \
	designer.desktop \
	designer-qt3.desktop \
	designer-qt4.desktop \
	desktop.desktop \
	desmume.desktop \
	devhelp.desktop \
	dfeet.desktop \
	dguitar.desktop \
	dhcpcd-gtk.desktop \
	dia-common.desktop \
	dia.desktop \
	diffuse.desktop \
	digikam.desktop \
	dillo.desktop \
	Display.desktop \
	display.desktop \
	dmenu_launch.desktop \
	dngconverter.desktop \
	docker.desktop \
	docky.desktop \
	dogtail-recorder.desktop \
	dolphin-emu.desktop \
	dopewars.desktop \
	dosbox.desktop \
	driconf.desktop \
	dvdisaster.desktop \
	dvdrip.desktop \
	dwarffortress.desktop \
	dwm.desktop \
	dwm-git.desktop \
	e16.desktop \
	e16-gnome2-session.desktop \
	e16-gnome3-session.desktop \
	e16-kde-session.desktop \
	e16-session.desktop \
	easytag.desktop \
	eboard.desktop \
	echinus.desktop \
	echinus-git.desktop \
	eclipse.desktop \
	ede.desktop \
	editres.desktop \
	educational.desktop \
	eeschema.desktop \
	efax-gtk.desktop \
	ekiga.desktop \
	electricsheep.desktop \
	elementary_config.desktop \
	elementary_test.desktop \
	elinks.desktop \
	emacs.desktop \
	emboss-explorer.desktop \
	emelfm2.desktop \
	emerillon.desktop \
	empathy.desktop \
	enable-xscreensaver.desktop \
	encompass.desktop \
	enigma.desktop \
	enlightenment_filemanager.desktop \
	eog.desktop \
	epdfview.desktop \
	epiphany.desktop \
	epiphany-game.desktop \
	eric6.desktop \
	eric6_webbrowser.desktop \
	eric.desktop \
	esmska.desktop \
	eterm.desktop \
	etherape.desktop \
	etr.desktop \
	ettercap.desktop \
	ettercap-gtk.desktop \
	evilwm.desktop \
	evolution-addressbook.desktop \
	evolution-calendar.desktop \
	Evolution.desktop \
	evolution.desktop \
	evolution-email.desktop \
	evolution-mail.desktop \
	evolution-tasklist.desktop \
	exo-file-manager.desktop \
	exo-mail-reader.desktop \
	exo-preferred-applications.desktop \
	exo-terminal-emulator.desktop \
	exo-web-browser.desktop \
	expoblending.desktop \
	extension.desktop \
	extremetuxracer.desktop \
	eye-of-gnome.desktop \
	failsafewm.desktop \
	fbpanel.desktop \
	FBReader.desktop \
	fbrun.desktop \
	fbxkb.desktop \
	fc.desktop \
	fedora-glade.desktop \
	fedora-release-notes.desktop \
	fedora-release-notesX.desktop \
	feh.desktop \
	ffadomixer.desktop \
	filelight.desktop \
	file-roller.desktop \
	filezilla.desktop \
	fillets-ng.desktop \
	find.desktop \
	firefox.desktop \
	five-or-more.desktop \
	flashplayer.desktop \
	flash-player-properties.desktop \
	flburn.desktop \
	flightgear.desktop \
	flight-of-the-amazon-queen.desktop \
	flipse.desktop \
	flmusic.desktop \
	flobopuyo.desktop \
	flphoto.desktop \
	fltk-editor.desktop \
	fluff.desktop \
	fluid.desktop \
	fluxbox.desktop \
	fluxbox-git.desktop \
	flwm-git.desktop \
	flwm-tc.desktop \
	fontforge.desktop \
	fox.desktop \
	freecad.desktop \
	freecell.desktop \
	freecol.desktop \
	freedroid.desktop \
	freedroidrpg.desktop \
	free-i.c.s..desktop \
	freemat.desktop \
	freemind.desktop \
	freevo.desktop \
	frogatto.desktop \
	frozen-bubble.desktop \
	f-spot-view.desktop \
	ftmenu.desktop \
	Fvwm1.desktop \
	fvwm2.desktop \
	fvwm-crystal.desktop \
	Fvwm.desktop \
	fvwm.desktop \
	fwbuilder.desktop \
	fyre.desktop \
	g3dviewer.desktop \
	gajim.desktop \
	galculator.desktop \
	galeon.desktop \
	gambatte-qt.desktop \
	gatotray.desktop \
	gaupol.desktop \
	gaw.desktop \
	gbrainy.desktop \
	gcalctool.desktop \
	gcdmaster.desktop \
	gcin-setup.desktop \
	gcm-import.desktop \
	gcm-prefs.desktop \
	gcolor2.desktop \
	gcompris.desktop \
	gcompris-edit.desktop \
	gconf-editor.desktop \
	gcr-prompter.desktop \
	gcr-viewer.desktop \
	gcstar.desktop \
	gdesklets.desktop \
	gdmap.desktop \
	gdmflexiserver-xnest.desktop \
	gdmsetup.desktop \
	geany.desktop \
	gebabbel.desktop \
	geda-gattrib.desktop \
	geda-gschem.desktop \
	gedit.desktop \
	geeqie.desktop \
	geeqie-standard.desktop \
	gens.desktop \
	geoclue-demo-agent.desktop \
	geoclue-where-am-i.desktop \
	geogebra.desktop \
	gerbv.desktop \
	gespeaker.desktop \
	gfontview.desktop \
	gftp.desktop \
	ghemical.desktop \
	ghex.desktop \
	giggle.desktop \
	Gimp.desktop \
	gimp.desktop \
	gitg.desktop \
	gkrellm.desktop \
	gksu.desktop \
	gksu-properties.desktop \
	gl-117.desktop \
	glabels.desktop \
	glines.desktop \
	gliv.desktop \
	gmdb.desktop \
	gmenu-simple-editor.desktop \
	gmerlin-alsamixer.desktop \
	gmerlin-camelot.desktop \
	gmerlin-kbd.desktop \
	gmerlin-player.desktop \
	gmerlin-plugincfg.desktop \
	gmerlin-recorder.desktop \
	gmerlin-transcoder.desktop \
	gmerlin-visualizer.desktop \
	gmpc.desktop \
	gmrun.desktop \
	gnect.desktop \
	gnibbles.desktop \
	gnobots2.desktop \
	gnome-activity-journal.desktop \
	gnome-alsamixer.desktop \
	gnome-background-panel.desktop \
	gnome-baobab.desktop \
	gnomecc.desktop \
	gnome-chess.desktop \
	gnome-commander.desktop \
	gnome-control-center.desktop \
	gnome-dasher.desktop \
	gnome-datetime-panel.desktop \
	gnome.desktop \
	gnome-devhelp.desktop \
	gnome-dictionary.desktop \
	gnome-display-panel.desktop \
	gnome-do.desktop \
	gnome-drivel.desktop \
	gnome-ekiga.desktop \
	gnome-eog.desktop \
	gnome-file-roller.desktop \
	gnome-font-viewer.desktop \
	gnome-gcalctool.desktop \
	gnome-gedit.desktop \
	gnome-gucharmap.desktop \
	gnome-hearts.desktop \
	gnome-iagno.desktop \
	gnome-info-panel.desktop \
	gnome-keyboard-panel.desktop \
	gnome-keyring-daemon.desktop \
	gnome-keyring-gpg.desktop \
	gnome-keyring-pkcs11.desktop \
	gnome-keyring-secrets.desktop \
	gnome-keyring-ssh.desktop \
	gnome-klotski.desktop \
	gnome-log-viewer.desktop \
	gnome-mahjongg.desktop \
	gnome-media-panel.desktop \
	gnome-mouse-panel.desktop \
	gnome-mplayer.desktop \
	gnome-nautilus-browser.desktop \
	gnome-nautilus-computer.desktop \
	gnome-nautilus.desktop \
	gnome-nautilus-folder-handler.desktop \
	gnome-nautilus-home.desktop \
	gnome-nettool.desktop \
	gnome-network-panel.desktop \
	gnome-network-scheme.desktop \
	gnome-network-tool.desktop \
	gnome-phone-manager.desktop \
	gnome-power-manager.desktop \
	gnome-power-panel.desktop \
	gnome-power-preferences.desktop \
	gnome-power-statistics.desktop \
	gnome-ppp.desktop \
	gnome-printers-panel.desktop \
	gnome-region-panel.desktop \
	gnome-robots.desktop \
	gnome-schedule.desktop \
	gnome-screen-panel.desktop \
	gnome-screensaver.desktop \
	gnome-screenshot.desktop \
	gnome-search-tool.desktop \
	gnome-settings-daemon.desktop \
	gnome-shell.desktop \
	gnome-sound-panel.desktop \
	gnome-sound-recorder.desktop \
	gnome-subtitles.desktop \
	gnome-sudoku.desktop \
	gnome-swell-foop.desktop \
	gnome-system-log.desktop \
	gnome-system-monitor.desktop \
	gnome-system-monitor-devices.desktop \
	gnome-terminal.desktop \
	gnome-tetravex.desktop \
	gnome-universal-access-panel.desktop \
	gnome-user-accounts-panel.desktop \
	gnome-user-share.desktop \
	gnome-user-share-properties.desktop \
	gnome-wm.desktop \
	gnome-yelp.desktop \
	gnormalize.desktop \
	gnote.desktop \
	gnubg.desktop \
	gnubiff.desktop \
	gnucash.desktop \
	gnuchess.desktop \
	gnujump.desktop \
	gnumeric.desktop \
	gnunet-gtk.desktop \
	gnuplot.desktop \
	gobby.desktop \
	gogglesmm.desktop \
	goldendict.desktop \
	golf.desktop \
	goobox.desktop \
	goomwwm.desktop \
	gourmet.desktop \
	gpa.desktop \
	gpaint.desktop \
	GParted.desktop \
	gparted.desktop \
	gphpedit.desktop \
	gpicview.desktop \
	gpointing-device-settings.desktop \
	gprename.desktop \
	gpsdrive.desktop \
	gqrx.desktop \
	gqview.desktop \
	grace.desktop \
	grafx2.desktop \
	gramps.desktop \
	granatier.desktop \
	grandr.desktop \
	graphics.desktop \
	gresolver.desktop \
	grsync.desktop \
	gscriptor.desktop \
	gsettings-data-convert.desktop \
	gsmartcontrol.desktop \
	gspiceui.desktop \
	gthumb.desktop \
	gthumb-import.desktop \
	gtk2_prefs.desktop \
	gtk3-demo.desktop \
	gtk3-icon-browser.desktop \
	gtk3-widget-factory.desktop \
	gtkballs.desktop \
	gtk-chtheme.desktop \
	gtk-lshw.desktop \
	gtkperf.desktop \
	gtkpod.desktop \
	gtk-recordmydesktop.desktop \
	gtk-theme-switch2.desktop \
	gtranslator.desktop \
	guake.desktop \
	guayadeque.desktop \
	gucharmap.desktop \
	gufw.desktop \
	gutenpy.desktop \
	guvcview.desktop \
	gv.desktop \
	gvim.desktop \
	gvncviewer.desktop \
	gwakeonlan.desktop \
	gwcommand.desktop \
	gweled.desktop \
	gwenview.desktop \
	gxditview.desktop \
	gxmessage.desktop \
	gxmessage-gtk2.desktop \
	hardinfo.desktop \
	hatariui.desktop \
	hedgewars.desktop \
	Help.desktop \
	herbstluftwm.desktop \
	hex-a-hop.desktop \
	hexchat.desktop \
	higan.desktop \
	higan-gtk.desktop \
	higan-qt.desktop \
	hitori.desktop \
	homebank.desktop \
	hplip.desktop \
	hplj1020.desktop \
	htop.desktop \
	hugin.desktop \
	hydrogen.desktop \
	i3.desktop \
	i3-with-shmlog.desktop \
	iagno.desktop \
	ibus.desktop \
	ibus-setup.desktop \
	icewm2.desktop \
	icewm.desktop \
	icewm-git.desktop \
	icewm-session.desktop \
	icewmtray.desktop \
	idesk.desktop \
	idle3.desktop \
	idle.desktop \
	imagemagick.desktop \
	info.desktop \
	inkscape.desktop \
	innovidata-opennx-admin.desktop \
	innovidata-opennx.desktop \
	innovidata-opennx-wizard.desktop \
	internet-chess-club.desktop \
	iptraf-ng.desktop \
	javafilter.desktop \
	jedit.desktop \
	joe.desktop \
	josm.desktop \
	jsampler.desktop \
	Jwm.desktop \
	jwm-git.desktop \
	k3b.desktop \
	kadu.desktop \
	kaffeine.desktop \
	kalgebra.desktop \
	kanagram.desktop \
	kapman.desktop \
	kapptemplate.desktop \
	kate.desktop \
	katesnippetstng_editor.desktop \
	katomic.desktop \
	kbibtex.desktop \
	kblackbox.desktop \
	kblocks.desktop \
	kbounce.desktop \
	kbreakout.desktop \
	kbruch.desktop \
	kcalc.desktop \
	KCharSelect.desktop \
	kcheckers.desktop \
	kchmviewer.desktop \
	kdbg.desktop \
	kdenlive.desktop \
	kdesvn.desktop \
	kdevelop.desktop \
	kdiamond.desktop \
	kdiff3.desktop \
	keepass.desktop \
	keepassx.desktop \
	kfourinline.desktop \
	kgeography.desktop \
	khangman.desktop \
	kicad.desktop \
	kid3.desktop \
	kid3-qt.desktop \
	kig.desktop \
	kile.desktop \
	killbots.desktop \
	kinfocenter.desktop \
	kiten.desktop \
	kjumpingcube.desktop \
	klavaro.desktop \
	klettres.desktop \
	klines.desktop \
	kmail.desktop \
	kmailservice.desktop \
	kmenuedit.desktop \
	kmess.desktop \
	kmines.desktop \
	kmix.desktop \
	kmplot.desktop \
	kmymoney.desktop \
	knemo.desktop \
	knetattach.desktop \
	knetwalk.desktop \
	kobodeluxe.desktop \
	kollision.desktop \
	kompare.desktop \
	kompozer.desktop \
	konqueror.desktop \
	konsole.desktop \
	konstruktor.desktop \
	konversation.desktop \
	kphotoalbum.desktop \
	krecipes.desktop \
	krename.desktop \
	kresources.desktop \
	kruler.desktop \
	krusader.desktop \
	kshisen.desktop \
	kshutdown.desktop \
	ksquares.desktop \
	ksshaskpass.desktop \
	kstars.desktop \
	ksysguard.desktop \
	kteatime.desktop \
	ktelnetservice.desktop \
	ktimer.desktop \
	ktorrent.desktop \
	kturtle.desktop \
	kvirc.desktop \
	kvkbd.desktop \
	kvpnc.desktop \
	kwordquiz.desktop \
	kwrite.desktop \
	lal.desktop \
	larswm.desktop \
	larswm-git.desktop \
	lat.desktop \
	lazarus.desktop \
	lbreakout2.desktop \
	leafpad.desktop \
	libcanberra-login-sound.desktop \
	libcanberra-ready-sound.desktop \
	libfm-pref-apps.desktop \
	libreoffice-base.desktop \
	libreoffice-calc.desktop \
	libreoffice-draw.desktop \
	libreoffice-impress.desktop \
	libreoffice-math.desktop \
	libreoffice-startcenter.desktop \
	libreoffice-writer.desktop \
	libreoffice-xsltfilter.desktop \
	libsmfm-pref-apps.desktop \
	licq.desktop \
	licq-qt3.desktop \
	licq-qt4.desktop \
	liferea.desktop \
	lightsoff.desktop \
	lincity-ng.desktop \
	lingot.desktop \
	linguist.desktop \
	linguist-qt3.desktop \
	linguist-qt4.desktop \
	links.desktop \
	linphone.desktop \
	linux32.desktop \
	lokalize.desktop \
	love.desktop \
	ltris.desktop \
	lxappearance.desktop \
	LXDE.desktop \
	lxde-logout.desktop \
	lxde-screenlock.desktop \
	lxinput.desktop \
	lxkb-config.desktop \
	lxmusic.desktop \
	lxpanelctl.desktop \
	lxpanel.desktop \
	lxpolkit.desktop \
	lxrandr.desktop \
	lxsession-default-apps.desktop \
	lxsession-edit.desktop \
	lxshortcut.desktop \
	lxtask.desktop \
	lxterminal.desktop \
	lynis.desktop \
	lynx.desktop \
	lyx.desktop \
	mageia-grip.desktop \
	mageia-vim-X11.desktop \
	mageia-xterm.desktop \
	manage-print-jobs.desktop \
	mandriva-gnuplot.desktop \
	mandriva-rox.desktop \
	mandriva-rxvt.desktop \
	mandriva-tightvnc.desktop \
	mandriva-vim-X11.desktop \
	mandriva-xkill.desktop \
	mandriva-xterm.desktop \
	manedit.desktop \
	mantis-wm.desktop \
	map.desktop \
	marco.desktop \
	mari0.desktop \
	mastermind.desktop \
	matchbox-keyboard.desktop \
	mate-about.desktop \
	mate-about-me.desktop \
	mate-appearance-properties.desktop \
	mate-at-properties.desktop \
	matecc.desktop \
	mate-default-applications-properties.desktop \
	mate.desktop \
	mate-display-properties.desktop \
	mate-font-viewer.desktop \
	mate-keybinding.desktop \
	mate-keyboard.desktop \
	mate-network-properties.desktop \
	mate-network-scheme.desktop \
	mate-notification-properties.desktop \
	mate-panel.desktop \
	mate-session-properties.desktop \
	mate-settings-daemon.desktop \
	mate-settings-mouse.desktop \
	mate-theme-installer.desktop \
	mate-user-guide.desktop \
	mate-window-properties.desktop \
	mathomatic.desktop \
	matwm2.desktop \
	matwm2-svn.desktop \
	maxima.desktop \
	maxima-ecl.desktop \
	mc.desktop \
	mcedit.desktop \
	mcwm.desktop \
	mcwm-git.desktop \
	mdbtools-gmdb.desktop \
	medit.desktop \
	meld.desktop \
	menutray.desktop \
	merlin.desktop \
	metacity.desktop \
	metacity-wm.desktop \
	meterbridge.desktop \
	midori.desktop \
	midori-private.desktop \
	milkytracker.desktop \
	minesweeper.desktop \
	minitube.desktop \
	mirage.desktop \
	mmc-wizard.desktop \
	moc-tray.desktop \
	modules.desktop \
	monica.desktop \
	monodevelop.desktop \
	mount-gtk.desktop \
	mousepad.desktop \
	mousetrap.desktop \
	mozilla-browser.desktop \
	Mozilla.desktop \
	MozillaFirefox.desktop \
	mozilla-firefox.desktop \
	mozilla-mailer.desktop \
	mozilla-thunderbird.desktop \
	mp3splt-gtk.desktop \
	mplayer-bluray.desktop \
	mplayer.desktop \
	mplayer-nosmb.desktop \
	mplayer-x.desktop \
	mpv.desktop \
	mscore.desktop \
	mtpaint.desktop \
	multibit.desktop \
	multimedia.desktop \
	mumble.desktop \
	mupdf.desktop \
	mupen64plus.desktop \
	murmur.desktop \
	mutt.desktop \
	mutter.desktop \
	mutter-wayland.desktop \
	mutter-wm.desktop \
	mvwm.desktop \
	mwm.desktop \
	mypaint.desktop \
	nact.desktop \
	nano.desktop \
	nautilus-autostart.desktop \
	nautilus-browser.desktop \
	nautilus-computer.desktop \
	nautilus.desktop \
	nautilus-folder-handler.desktop \
	nautilus-home.desktop \
	nautilus-search.desktop \
	ncmpcpp.desktop \
	nedit.desktop \
	nemiver.desktop \
	netgen.desktop \
	nethogs.desktop \
	network.desktop \
	network-scheme.desktop \
	neverball.desktop \
	nfoview.desktop \
	ninja-ide.desktop \
	nm-applet.desktop \
	nm-connection-editor.desktop \
	notification-daemon.desktop \
	notification-properties.desktop \
	nxterm.desktop \
	obconf.desktop \
	obxprop.desktop \
	oclock.desktop \
	ocrfeeder.desktop \
	okteta.desktop \
	oolite.desktop \
	ooo-extension-manager.desktop \
	openbox.desktop \
	openbox-git.desktop \
	openbox-gnome.desktop \
	openbox-kde.desktop \
	openoffice.org-extension.desktop \
	openscad.desktop \
	openshot.desktop \
	openttd.desktop \
	opera-browser.desktop \
	opera-mailer.desktop \
	ophcrack.desktop \
	oprofile.desktop \
	orca-autostart.desktop \
	orca.desktop \
	orca-screen-reader.desktop \
	org.gnome.Boxes.desktop \
	org.gnome.font-viewer.desktop \
	org.gnome.Totem.desktop \
	osmo.desktop \
	packeth.desktop \
	pacmanexpress.desktop \
	palimpsest.desktop \
	pango-view.desktop \
	paprefs.desktop \
	parcellite.desktop \
	parley.desktop \
	parole.desktop \
	partitionmanager.desktop \
	patchage.desktop \
	PathFinder.desktop \
	pathological.desktop \
	pavucontrol.desktop \
	pawm.desktop \
	pcmanfm.desktop \
	pcmanfm-desktop-pref.desktop \
	pcmanfm-user-f4.desktop \
	pcmanfm-user-f6.desktop \
	pcmanfm-user-f7.desktop \
	pcmanfm-user-f8.desktop \
	pcmanfm-user-f9.desktop \
	pdfmod.desktop \
	pdfsam.desktop \
	pegged.desktop \
	peksystray.desktop \
	pekwm.desktop \
	pekwm-git.desktop \
	pekwm_kdm.desktop \
	penguin-canfield.desktop \
	penguin-freecell.desktop \
	penguin-golf.desktop \
	penguin-mastermind.desktop \
	penguin-merlin.desktop \
	penguin-minesweeper.desktop \
	penguin-pegged.desktop \
	penguins.desktop \
	penguin-solitaire.desktop \
	penguin-spider.desktop \
	penguin-taipei.desktop \
	penguin-taipei-editor.desktop \
	penguin-thornq.desktop \
	performous.desktop \
	pgadmin3.desktop \
	picard.desktop \
	pidgin.desktop \
	piedock.desktop \
	pingus.desktop \
	pinot.desktop \
	pinta.desktop \
	pitivi.desktop \
	planner.desktop \
	PlayOnLinux.desktop \
	pnmixer.desktop \
	poedit.desktop \
	pokerth.desktop \
	polkit-gnome-authentication-agent-1.desktop \
	polkit-mate-authentication-agent-1.desktop \
	pragha.desktop \
	preferred-execute.desktop \
	preferred-file-manager.desktop \
	preferred-mail-reader.desktop \
	preferred-terminal.desktop \
	preferred-text-editor.desktop \
	preferred-web-browser.desktop \
	print-applet.desktop \
	processing-beta.desktop \
	processing.desktop \
	procinfo.desktop \
	projectM-jack.desktop \
	projectM-pulseaudio.desktop \
	psi.desktop \
	pstree.desktop \
	PTBatcherGUI.desktop \
	pterm.desktop \
	puias-audio-player.desktop \
	puias-diagrams.desktop \
	puias-evolution-calendar.desktop \
	puias-evolution-contacts.desktop \
	puias-evolution-mail.desktop \
	puias-evolution-tasks.desktop \
	pulseaudio.desktop \
	pulseaudio-module-xsmp.desktop \
	puredata.desktop \
	putty.desktop \
	pychess.desktop \
	pycrust.desktop \
	pymol.desktop \
	pympd.desktop \
	pyNeighborhood.desktop \
	q4wine.desktop \
	qalculate-gtk.desktop \
	qBittorrent.desktop \
	QCad.desktop \
	qcad.desktop \
	qdbusviewer.desktop \
	qdbusviewer-qt4.desktop \
	qemu-launcher.desktop \
	qgit.desktop \
	qgo.desktop \
	qiv.desktop \
	qjackctl.desktop \
	qjadeo.desktop \
	qlandkartegt.desktop \
	qmmp_cue.desktop \
	qmmp.desktop \
	qmmp_enqueue.desktop \
	qpxtool.desktop \
	qsopcast.desktop \
	qstardict.desktop \
	qstart.desktop \
	qsynth.desktop \
	qt3config.desktop \
	qt4config.desktop \
	qt4-designer.desktop \
	qt4-linguist.desktop \
	qt4-qtconfig.desktop \
	qt-assistant3.desktop \
	qtconfig.desktop \
	qtconfig-qt4.desktop \
	qtcreator.desktop \
	qtemu.desktop \
	qtfm.desktop \
	qtiplot.desktop \
	qt-linguist3.desktop \
	qtractor.desktop \
	quadrapassel.desktop \
	quasselclient.desktop \
	qucs.desktop \
	quodlibet.desktop \
	qupzilla.desktop \
	qutecom.desktop \
	qv4l2.desktop \
	rakarrack.desktop \
	raktpdf.desktop \
	rapidsvn.desktop \
	ratpoison.desktop \
	rawstudio.desktop \
	rawtherapee.desktop \
	rbutil.desktop \
	Rcmdr.desktop \
	r.desktop \
	recoll-searchgui.desktop \
	redhat-audio-player.desktop \
	redhat-diagrams.desktop \
	Red_Hat_Enterprise_Linux-Release_Notes-6-en-US.desktop \
	redhat-evolution-calendar.desktop \
	redhat-evolution-contacts.desktop \
	redhat-evolution-mail.desktop \
	redhat-evolution-tasks.desktop \
	redhat-manage-print-jobs.desktop \
	redhat-print-applet.desktop \
	redhat-system-config-printer.desktop \
	redhat-wireshark.desktop \
	regexxer.desktop \
	rekonq.desktop \
	remmina-applet.desktop \
	remmina.desktop \
	renpy.desktop \
	Retrovol.desktop \
	retrovol.desktop \
	rftg.desktop \
	rhythmbox.desktop \
	ripperx.desktop \
	ristretto.desktop \
	rocksndiamonds.desktop \
	rocs.desktop \
	rodent.desktop \
	rollemup.desktop \
	roller.desktop \
	rosegarden.desktop \
	rox.desktop \
	rox-filer.desktop \
	roxterm.desktop \
	rpmforge-rxvt-unicode.desktop \
	rxvt.desktop \
	rygel.desktop \
	sabayon.desktop \
	sakura.desktop \
	sbxkb.desktop \
	scangui.desktop \
	scim.desktop \
	scim-setup.desktop \
	scite.desktop \
	scorched3d.desktop \
	scratch.desktop \
	screenlets-manager.desktop \
	screensaver.desktop \
	scribes.desktop \
	scribus.desktop \
	scummvm.desktop \
	sd-applet.desktop \
	sd-files.desktop \
	sd-units.desktop \
	seahorse.desktop \
	seamonkey.desktop \
	seamonkey-mail.desktop \
	sh.desktop \
	shotwell.desktop \
	shotwell-viewer.desktop \
	shutter.desktop \
	simpleburn.desktop \
	simple-scan.desktop \
	simutrans.desktop \
	singularity.desktop \
	sk1.desktop \
	skanlite.desktop \
	skrooge.desktop \
	slashem-x11.desktop \
	slimevolley.desktop \
	slock.desktop \
	sl-release-notes.desktop \
	smart.desktop \
	smb4k.desktop \
	smplayer.desktop \
	smplayer_enqueue.desktop \
	smproxy.desktop \
	sniff.desktop \
	software-properties.desktop \
	solfege.desktop \
	solitaire.desktop \
	sonata.desktop \
	soundconverter.desktop \
	sound-juicer.desktop \
	soundkonverter.desktop \
	spacefm.desktop \
	spacefm-find.desktop \
	spacefm-folder-handler.desktop \
	spectrwm.desktop \
	spectrwm-git.desktop \
	speedcrunch.desktop \
	speed-dreams.desktop \
	springdale-release-notes.desktop \
	spring.desktop \
	springlobby.desktop \
	sqlitebrowser.desktop \
	squeak.desktop \
	ssh.desktop \
	ssvnc.desktop \
	stalonetray.desktop \
	stardict.desktop \
	starplot.desktop \
	startcenter.desktop \
	Start_DRBL.desktop \
	stella.desktop \
	stellarium.desktop \
	step.desktop \
	Stop_DRBL.desktop \
	stopmotion.desktop \
	stuurman.desktop \
	stuurman-desktop-pref.desktop \
	subdownloader.desktop \
	subtitleeditor.desktop \
	sudoku.desktop \
	sun-java.desktop \
	supertux.desktop \
	supertuxkart.desktop \
	surf.desktop \
	sweep.desktop \
	sweethome3d.desktop \
	swell-foop.desktop \
	sxiv.desktop \
	sylpheed-claws.desktop \
	sylpheed.desktop \
	synfigstudio.desktop \
	sysprof.desktop \
	systemadm.desktop \
	system-config-printer.desktop \
	system.desktop \
	systemsettings.desktop \
	taipei.desktop \
	taipei-editor.desktop \
	tasque.desktop \
	tdfsb.desktop \
	tea.desktop \
	teamspeak3.desktop \
	teeworlds.desktop \
	tellico.desktop \
	telnet.desktop \
	terminal-as-root-(gksu).desktop \
	terminals.desktop \
	terminator.desktop \
	tetex-xdvi.desktop \
	texconfig.desktop \
	texdoctk.desktop \
	texmacs.desktop \
	texmaker.desktop \
	text_editors.desktop \
	the-gimp.desktop \
	thornq.desktop \
	Thunar-bulk-rename.desktop \
	Thunar.desktop \
	Thunar-folder-handler.desktop \
	thunar-sendto-email.desktop \
	thunar-sendto-xfburn.desktop \
	thunar-settings.desktop \
	thunar-volman-settings.desktop \
	thunderbird.desktop \
	tilda.desktop \
	tiled.desktop \
	tint2conf.desktop \
	tkabber.desktop \
	tkwish8.6.desktop \
	tmp.desktop \
	tmw.desktop \
	tomboy.desktop \
	top.desktop \
	torcs.desktop \
	totem.desktop \
	transmageddon.desktop \
	transmission.desktop \
	transmission-gtk.desktop \
	transmission-qt.desktop \
	truecrypt.desktop \
	TUV.desktop \
	tuxcards.desktop \
	tuxcmd.desktop \
	tuxguitar.desktop \
	tuxpaint.desktop \
	twm.desktop \
	twm-git.desktop \
	twobwm.desktop \
	ude.desktop \
	uget-gtk.desktop \
	uim.desktop \
	umlet.desktop \
	unclutter.desktop \
	unetbootin.desktop \
	unison.desktop \
	uqm.desktop \
	urbanterror.desktop \
	urxvtc.desktop \
	urxvt.desktop \
	urxvt-tabbed.desktop \
	usbview.desktop \
	uwm.desktop \
	uwm-git.desktop \
	uxterm.desktop \
	v4l2ucp.desktop \
	vboxclient.desktop \
	velox.desktop \
	velox-git.desktop \
	vi.desktop \
	vifm.desktop \
	viking.desktop \
	vile.desktop \
	vim.desktop \
	vinagre.desktop \
	vinagre-file.desktop \
	vino-preferences.desktop \
	virt-manager.desktop \
	virtualbox.desktop \
	virtualbox-ose.desktop \
	visualvm.desktop \
	vlc.desktop \
	vmpk.desktop \
	vncviewer.desktop \
	volume-app.desktop \
	vor.desktop \
	vtwm.desktop \
	vtwm-git.desktop \
	vym.desktop \
	w3m.desktop \
	waimea-cvs.desktop \
	waimea-git.desktop \
	wammu.desktop \
	warzone2100.desktop \
	wicd.desktop \
	wicd-gtk.desktop \
	widelands.desktop \
	wifi-radar.desktop \
	wind.desktop \
	windowmaker-crm-git.desktop \
	WindowMaker.desktop \
	windowmaker-git.desktop \
	windwm.desktop \
	windwm-git.desktop \
	winecfg.desktop \
	wine.desktop \
	winff.desktop \
	wings3d.desktop \
	wireshark.desktop \
	wireshark-git.desktop \
	wireshark-qt.desktop \
	wm2.desktop \
	wm2-svn.desktop \
	wmacpi.desktop \
	wmagnify.desktop \
	wmaker.desktop \
	wmappl.desktop \
	wmauda.desktop \
	wmbatteries.desktop \
	wmbattery.desktop \
	wmbiff.desktop \
	wmBinClock.desktop \
	wmblob.desktop \
	wmblueclock.desktop \
	wmbluecpu.desktop \
	wmbluegpu.desktop \
	wmbluemem.desktop \
	wmbubble.desktop \
	wmbutton.desktop \
	wmcalc.desktop \
	wmCalClock.desktop \
	wmCalClockKbd.desktop \
	wmcdplay.desktop \
	wmcliphist.desktop \
	wmclock.desktop \
	wmclockmon.desktop \
	wmcore.desktop \
	wmcpu.desktop \
	wmcpuload.desktop \
	wmcpumon.desktop \
	wmdate.desktop \
	wmdiskmon.desktop \
	wmfire.desktop \
	wmforkplop.desktop \
	wmfrog.desktop \
	wmgtemp.desktop \
	wmifinfo.desktop \
	wmifs.desktop \
	wmii.desktop \
	wminet.desktop \
	wmitime.desktop \
	wmmail.desktop \
	wmmaiload.desktop \
	wmMand.desktop \
	wmMatrix.desktop \
	wmmixer.desktop \
	wmmon.desktop \
	wmMoonClock.desktop \
	wmmount.desktop \
	wmnd.desktop \
	wmnet.desktop \
	wmpinboard.desktop \
	wmpomme.desktop \
	wmppp.desktop \
	wmrack.desktop \
	wmsensors.desktop \
	wmshutdown.desktop \
	wmsmixer.desktop \
	wmsmpmon.desktop \
	wmstickynotes.desktop \
	wmsun.desktop \
	wmsysmon.desktop \
	wmsystemtray.desktop \
	wmsystray.desktop \
	wmtemp.desktop \
	wmtime.desktop \
	wmtimer.desktop \
	wmtop.desktop \
	wmtrash.desktop \
	wmudmount.desktop \
	wmwave.desktop \
	wmWeather.desktop \
	wmweather+.desktop \
	wmwifi.desktop \
	wmwork.desktop \
	wmx.desktop \
	wmx-svn.desktop \
	workrave.desktop \
	wpa_gui.desktop \
	www.octave.org-octave.desktop \
	wxmaxima.desktop \
	x11vnc.desktop \
	xaos.desktop \
	xarchiver.desktop \
	xawtv.desktop \
	xbiff.desktop \
	xbill.desktop \
	xboard-config.desktop \
	xboard.desktop \
	xboard-fen-viewer.desktop \
	xboard-ics.desktop \
	xboard-(passive-chessboard).desktop \
	xboard-pgn-viewer.desktop \
	xboard-tourney.desktop \
	xcalc.desktop \
	xchat.desktop \
	xchm.desktop \
	xcircuit.desktop \
	xclipboard.desktop \
	xclock.desktop \
	xcolorsel.desktop \
	xconsole.desktop \
	xde-app.desktop \
	xde-input.desktop \
	xde-logout.desktop \
	xde-pager.desktop \
	xde-panel.desktop \
	xde-run.desktop \
	xde-setbg.desktop \
	xde-watch.desktop \
	xde-xlock.desktop \
	xdg-launch.desktop \
	xdg-monitor.desktop \
	xdg-traymenu.desktop \
	xditview.desktop \
	xdpyinfo.desktop \
	xdvi.desktop \
	xdwm.desktop \
	xedit.desktop \
	xemacs.desktop \
	xenwatch.desktop \
	xev.desktop \
	xeyes.desktop \
	xfburn.desktop \
	xfcalendar.desktop \
	xfce4-about.desktop \
	xfce4-accessibility-settings.desktop \
	xfce4-appfinder.desktop \
	xfce4-clipman-plugin.desktop \
	xfce4-dict.desktop \
	xfce4-mixer.desktop \
	xfce4-notifyd-config.desktop \
	xfce4-panel-manager.desktop \
	xfce4-power-manager-settings.desktop \
	xfce4-screenshooter.desktop \
	xfce4-sensors.desktop \
	xfce4-settings-editor.desktop \
	xfce4-taskmanager.desktop \
	xfce4-terminal.desktop \
	xfce.desktop \
	xfce-display-settings.desktop \
	xfce-keyboard-settings.desktop \
	xfce-mouse-settings.desktop \
	xfce-session-settings.desktop \
	xfce-settings-manager.desktop \
	xfce-ui-settings.desktop \
	xfce-wm-settings.desktop \
	xfce-wmtweaks-settings.desktop \
	xfce-workspaces-settings.desktop \
	xfe.desktop \
	xfi.desktop \
	xfig.desktop \
	xfishtank.desktop \
	xfontsel.desktop \
	xfp.desktop \
	xfv.desktop \
	xfw.desktop \
	xgalaga.desktop \
	xgalaga-hyperspace.desktop \
	xine.desktop \
	xine-ui.desktop \
	xinput.desktop \
	xjadeo.desktop \
	xkbvleds.desktop \
	xkbwatch.desktop \
	Xkill.desktop \
	xkill.desktop \
	xload.desktop \
	xlockmore.desktop \
	xlogo.desktop \
	xlsatoms.desktop \
	xlsclients.desktop \
	xmag.desktop \
	xmahjongg.desktop \
	xman.desktop \
	Xmms.desktop \
	xmms.desktop \
	xmodmap.desktop \
	xmonad.desktop \
	xmoto.desktop \
	xonotic.desktop \
	xournal.desktop \
	xpad.desktop \
	xpaint.desktop \
	xpdf.desktop \
	xplanetFX.desktop \
	xprop.desktop \
	xrandr.desktop \
	xrced.desktop \
	Xrefresh.desktop \
	xrefresh.desktop \
	xrestop.desktop \
	xsane.desktop \
	xscreensaver.desktop \
	xsensors.desktop \
	xset.desktop \
	xsltfilter.desktop \
	xsnow.desktop \
	xstdcmap.desktop \
	xterm.desktop \
	xterm-(unicode).desktop \
	xtetris.desktop \
	xtools.desktop \
	xv.desktop \
	xvidtune.desktop \
	xvinfo.desktop \
	xwd.desktop \
	x-window-snapshot.desktop \
	xwininfo.desktop \
	xwud.desktop \
	xzgv.desktop \
	yabause-gtk.desktop \
	yabause-qt.desktop \
	yakuake.desktop \
	yeahwm.desktop \
	yelp.desktop \
	zalc.desktop \
	zat.desktop \
	zathura.desktop \
	zathura-pdf-poppler.desktop \
	zathura-ps.desktop \
	zaz.desktop \
	zenmap.desktop \
	zenmap-root.desktop \
	zim.desktop \
	zsnes.desktop \
	zynaddsubfx.desktop

