
#dist_auto_DATA = \
#	at-spi-dbus-bus.desktop \
#	at-spi-registryd.desktop \
#	bbkeys.desktop \
#	bbrun.desktop \
#	cbatticon.desktop \
#	compton.desktop \
#	compton-fluxbox.desktop \
#	deja-dup-monitor.desktop \
#	dhcpcd-gtk.desktop \
#	docker.desktop \
#	eekboard-autostart.desktop \
#	gatotray.desktop \
#	gnome-keyring-gpg.desktop \
#	gnome-keyring-pkcs11.desktop \
#	gnome-keyring-secrets.desktop \
#	gnome-keyring-ssh.desktop \
#	gnome-settings-daemon.desktop \
#	gsettings-data-convert.desktop \
#	icewmtray.desktop \
#	idesk.desktop \
#	lxpanel.desktop \
#	lxpolkit.desktop \
#	mate-settings-daemon.desktop \
#	menutray.desktop \
#	nm-applet.desktop \
#	pnmixer.desktop \
#	polkit-mate-authentication-agent-1.desktop \
#	print-applet.desktop \
#	pulseaudio.desktop \
#	remmina-applet.desktop \
#	retrovol.desktop \
#	sd-applet.desktop \
#	smproxy.desktop \
#	xiccd.desktop \
#	vboxclient.desktop \
#	wmappl.desktop \
#	wmbattery.desktop \
#	wmblob.desktop \
#	wmbubble.desktop \
#	wmCalClock.desktop \
#	wmclockmon.desktop \
#	wmcore.desktop \
#	wmcpuload.desktop \
#	wmmixer.desktop \
#	wmnd.desktop \
#	wmnet.desktop \
#	wmsysmon.desktop \
#	wmsystemtray.desktop \
#	wmtimer.desktop \
#	wmWeather.desktop \
#	wmweather+.desktop \
#	xde-input.desktop \
#	xde-pager.desktop \
#	xde-panel.desktop \
#	xde-setbg.desktop \
#	xdg-monitor.desktop

