
dist_dirs_DATA = \
	dockapps.directory \
	xde-2dgraphics.directory \
	xde-3dgraphics.directory \
	xde-accessibility.directory \
	xde-accessories.directory \
	xde-actiongame.directory \
	xde-adult.directory \
	xde-adventuregame.directory \
	xde-amusement.directory \
	xde-applications.directory \
	xde-arcadegame.directory \
	xde-archiving.directory \
	xde-archlinux.directory \
	xde-art.directory \
	xde-artificiali.directory \
	xde-astronomy.directory \
	xde-audio.directory \
	xde-audiovideo.directory \
	xde-audiovideoediting.directory \
	xde-biology.directory \
	xde-blocksgame.directory \
	xde-boardgame.directory \
	xde-building.directory \
	xde-calculator.directory \
	xde-calendar.directory \
	xde-cardgame.directory \
	xde-chart.directory \
	xde-chat.directory \
	xde-chemistry.directory \
	xde-clock.directory \
	xde-compression.directory \
	xde-computerscience.directory \
	xde-consoleonly.directory \
	xde-construction.directory \
	xde-contact.directory \
	xde-core.directory \
	xde-database.directory \
	xde-datavisualization.directory \
	xde-desktopsettings.directory \
	xde-development.directory \
	xde-dialup.directory \
	xde-dictionary.directory \
	xde-discburning.directory \
	xde-dockapps.directory \
	xde-documentation.directory \
	xde-economy.directory \
	xde-education.directory \
	xde-electricity.directory \
	xde-electronics.directory \
	xde-email.directory \
	xde-emulator.directory \
	xde-engineering.directory \
	xde-feed.directory \
	xde-filemanager.directory \
	xde-filesystem.directory \
	xde-filetools.directory \
	xde-filetransfert.directory \
	xde-finance.directory \
	xde-flowchart.directory \
	xde-games.directory \
	xde-geography.directory \
	xde-geology.directory \
	xde-geoscience.directory \
	xde-gnome-webapplications.directory \
	xde-graphics.directory \
	xde-guidesigner.directory \
	xde-hamradio.directory \
	xde-hardwaresettings.directory \
	xde-history.directory \
	xde-humanities.directory \
	xde-ide.directory \
	xde-imageprocessing.directory \
	xde-instantmessaging.directory \
	xde-internet.directory \
	xde-ircclient.directory \
	xde-kidsgame.directory \
	xde-languages.directory \
	xde-literature.directory \
	xde-logicgame.directory \
	xde-maps.directory \
	xde-math.directory \
	xde-medicalsoftware.directory \
	xde-midi.directory \
	xde-mixer.directory \
	xde-monitor.directory \
	xde-multimedia.directory \
	xde-music.directory \
	xde-news.directory \
	xde-numericalanalysis.directory \
	xde-ocr.directory \
	xde-office.directory \
	xde-other.directory \
	xde-p2p.directory \
	xde-packagemanager.directory \
	xde-parallelcomputing.directory \
	xde-pda.directory \
	xde-photography.directory \
	xde-physics.directory \
	xde-player.directory \
	xde-presentation.directory \
	xde-printing.directory \
	xde-profiling.directory \
	xde-projectmanagement.directory \
	xde-publishing.directory \
	xde-rastergraphics.directory \
	xde-recorder.directory \
	xde-remoteaccess.directory \
	xde-revisionctrl.directory \
	xde-robotics.directory \
	xde-roleplaying.directory \
	xde-scanning.directory \
	xde-science.directory \
	xde-screensavers.directory \
	xde-security.directory \
	xde-sequencer.directory \
	xde-settings.directory \
	xde-shell.directory \
	xde-shooter.directory \
	xde-simulation.directory \
	xde-spirituality.directory \
	xde-sports.directory \
	xde-sportsgame.directory \
	xde-spreadsheet.directory \
	xde-strategygame.directory \
	xde-system.directory \
	xde-system-tools.directory \
	xde-telephony.directory \
	xde-telephonytools.directory \
	xde-terminalemulator.directory \
	xde-texteditor.directory \
	xde-texttools.directory \
	xde-translation.directory \
	xde-tuner.directory \
	xde-tv.directory \
	xde-vectorgraphics.directory \
	xde-videoconference.directory \
	xde-video.directory \
	xde-viewer.directory \
	xde-webbrowser.directory \
	xde-webdevelopment.directory \
	xde-windowmanager.directory \
	xde-word.directory \
	xde-x11-tools.directory \
	X-X11-Tools.directory

