
dist_dock_DATA = \
	allin1.desktop \
	AlsaMixer.app.desktop \
	asclock.desktop \
	bbrun.desktop \
	bubblemon.desktop \
	docker.desktop \
	flipse.desktop \
	lal.desktop \
	peksystray.desktop \
	volume-app.desktop \
	wmacpi.desktop \
	wmappl.desktop \
	wmauda.desktop \
	wmbatteries.desktop \
	wmbattery.desktop \
	wmbiff.desktop \
	wmBinClock.desktop \
	wmblob.desktop \
	wmblueclock.desktop \
	wmbluecpu.desktop \
	wmbluegpu.desktop \
	wmbluemem.desktop \
	wmbubble.desktop \
	wmbutton.desktop \
	wmcalc.desktop \
	wmCalClock.desktop \
	wmCalClockKbd.desktop \
	wmcdplay.desktop \
	wmcliphist.desktop \
	wmclock.desktop \
	wmclockmon.desktop \
	wmcore.desktop \
	wmcpu.desktop \
	wmcpuload.desktop \
	wmcpumon.desktop \
	wmdate.desktop \
	wmdiskmon.desktop \
	wmfire.desktop \
	wmforkplop.desktop \
	wmfrog.desktop \
	wmgtemp.desktop \
	wmifinfo.desktop \
	wmifs.desktop \
	wminet.desktop \
	wmitime.desktop \
	wmmail.desktop \
	wmmaiload.desktop \
	wmMand.desktop \
	wmmatrix.desktop \
	wmmemload.desktop \
	wmmixer.desktop \
	wmmon.desktop \
	wmMoonClock.desktop \
	wmmount.desktop \
	wmnd.desktop \
	wmnet.desktop \
	wmpinboard.desktop \
	wmpomme.desktop \
	wmppp.desktop \
	wmrack.desktop \
	wmsensors.desktop \
	wmshutdown.desktop \
	wmsmixer.desktop \
	wmsmpmon.desktop \
	wmstickynotes.desktop \
	wmsun.desktop \
	wmsysmon.desktop \
	wmsystemtray.desktop \
	wmsystray.desktop \
	wmtemp.desktop \
	wmtime.desktop \
	wmtimer.desktop \
	wmtop.desktop \
	wmtrash.desktop \
	wmudmount.desktop \
	wmwave.desktop \
	wmWeather.desktop \
	wmweather+.desktop \
	wmwifi.desktop \
	wmwork.desktop

